<resources>
    <string name="app_name">proffind</string>
    <string name="username">User Name/Email Id</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="login">Login Page</string>
    <string name="remember">Remember me</string>
    <string name="forgotpassword">Forgot Password</string>
    <string name="signup">signup</string>
    <string name="newusername">User Name</string>
    <string name="emailid">Email Address</string>
    <string name="reenteremailid">Re-enter Email Address</string>
    <string name="reenterpassword">Re-enter Password</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="textSignUp">Not a user? click signup to create account</string>
    <string name="clicksignup">
        <u>SIGN UP!</u>.
    </string>
    <string-array name="usertypeselect">
        <item>STUDENT</item>
        <item>PROFESSOR</item>
        <item>OTHER</item>
    </string-array>
    <string name="title_activity_test">Test</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_home_page">HomePage</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>